# Interview-project

./: README.md
sc/: Cargo.toml
sc/src/: entry_point.rs  error.rs  instruction.rs  lib.rs
tests/: index.ts  package-lock.json  package.json  solana_test.test.ts  solana_test.ts  utils.ts
tests/data/: id.example.json  id.json
