[package]
name = "sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.15.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"

[lib]
name = "solana_test"
crate-type = ["cdylib", "lib"]
